# KiRoM

./: README.md  docker-compose.yml  dockerFile  isaacsimrobot.dockerFile  physicalrobot.dockerFile
joint_state_filter/: package.xml  setup.cfg  setup.py
joint_state_filter/joint_state_filter/: joint_state_filter.py
kirom/: CMakeLists.txt  package.xml  setup.py
kirom/launch/: kirom.launch.py
kirom/src/: kirom.cpp
kirom_picknplace/: CMakeLists.txt  package.xml
kirom_picknplace/launch/: kirom_interface.launch.py  pick_place_demo.launch.py
kirom_picknplace/src/: kirom_interface.cpp  kirom_picknplace.cpp
resources/: connect.cpp  gen3.srdf  mtc.rviz  ompl_planning.yaml
