<package format="3">
  <name>joint_state_filter</name>
  <version>0.0.0</version>
  <description>A ROS2 node to filter joint states by removing mimic joints.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
